profilelist1exp/unpackaged/objects/Create_Quote_Profiles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store proflies to display create quote links</description>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To store flag to display create quote link.</description>
        <label>isDSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To control USP button</description>
        <label>isUSP</label>
        <type>Checkbox</type>
    </fields>
    <label>Create Quote Profiles</label>
</CustomObject>